crates/ruff_python_parser/tests/snapshots/invalid_syntax@from_import_star_with_other_names.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/from_import_star_with_other_names.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..87,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 0..18,
                    module: Some(
                        Identifier {
                            id: Name("x"),
                            range: 5..6,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 15,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("*"),
                                range: 14..15,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            end: 18,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("a"),
                                range: 17..18,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 19..40,
                    module: Some(
                        Identifier {
                            id: Name("x"),
                            range: 24..25,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 34,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("a"),
                                range: 33..34,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            end: 37,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("*"),
                                range: 36..37,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            end: 40,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("b"),
                                range: 39..40,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 41..64,
                    module: Some(
                        Identifier {
                            id: Name("x"),
                            range: 46..47,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 56,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("*"),
                                range: 55..56,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            end: 64,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("a"),
                                range: 58..59,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: Some(
                                Identifier {
                                    id: Name("b"),
                                    range: 63..64,
                                    node_index: NodeIndex(None),
                                    parameter_node_index: NodeIndex(None),
                                },
                            ),
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 65..86,
                    module: Some(
                        Identifier {
                            id: Name("x"),
                            range: 70..71,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 80,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("*"),
                                range: 79..80,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            end: 83,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("*"),
                                range: 82..83,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            end: 86,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("a"),
                                range: 85..86,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | from x import *, a
  |               ^^^^ Syntax Error: Star import must be the only import
2 | from x import a, *, b
3 | from x import *, a as b
  |


  |
1 | from x import *, a
2 | from x import a, *, b
  |               ^^^^^^^ Syntax Error: Star import must be the only import
3 | from x import *, a as b
4 | from x import *, *, a
  |


  |
1 | from x import *, a
2 | from x import a, *, b
3 | from x import *, a as b
  |               ^^^^^^^^^ Syntax Error: Star import must be the only import
4 | from x import *, *, a
  |


  |
2 | from x import a, *, b
3 | from x import *, a as b
4 | from x import *, *, a
  |               ^^^^^^^ Syntax Error: Star import must be the only import
  |
