crates/ruff_python_parser/tests/snapshots/invalid_syntax@from_import_unparenthesized_trailing_comma.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/from_import_unparenthesized_trailing_comma.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..59,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 0..16,
                    module: Some(
                        Identifier {
                            id: Name("a"),
                            range: 5..6,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 15,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("b"),
                                range: 14..15,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 17..38,
                    module: Some(
                        Identifier {
                            id: Name("a"),
                            range: 22..23,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 37,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("b"),
                                range: 31..32,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: Some(
                                Identifier {
                                    id: Name("c"),
                                    range: 36..37,
                                    node_index: NodeIndex(None),
                                    parameter_node_index: NodeIndex(None),
                                },
                            ),
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 39..58,
                    module: Some(
                        Identifier {
                            id: Name("a"),
                            range: 44..45,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 54,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("b"),
                                range: 53..54,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            end: 57,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("c"),
                                range: 56..57,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | from a import b,
  |                ^ Syntax Error: Trailing comma not allowed
2 | from a import b as c,
3 | from a import b, c,
  |


  |
1 | from a import b,
2 | from a import b as c,
  |                     ^ Syntax Error: Trailing comma not allowed
3 | from a import b, c,
  |


  |
1 | from a import b,
2 | from a import b as c,
3 | from a import b, c,
  |                   ^ Syntax Error: Trailing comma not allowed
  |
